[gd_scene load_steps=20 format=3 uid="uid://dy6t7hkqe3cok"]

[ext_resource type="Texture2D" uid="uid://ut3abc034wuw" path="res://assets/IngeUI/UIBackground/Background2.0.png" id="1_a7aiq"]
[ext_resource type="Script" uid="uid://b2jcp16v6lhgc" path="res://ui/menu/StudentScreens/new_student.gd" id="1_ydma7"]
[ext_resource type="FontFile" uid="uid://dxnpu45uo35il" path="res://assets/IngeUI/LilitaOne-Regular.ttf" id="2_ydma7"]
[ext_resource type="Texture2D" uid="uid://b0se0pxo7xs7v" path="res://assets/IngeUI/UIIcons/triangleup.png" id="3_jvv66"]
[ext_resource type="Texture2D" uid="uid://cyhu3wg2mnx34" path="res://assets/IngeUI/UIIcons/triangledown.png" id="4_i84gg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u7y6x"]
bg_color = Color(0.956863, 0.784314, 0.258824, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.231373, 0.121569, 0.0392157, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24
shadow_size = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q3doq"]
bg_color = Color(0.740949, 0.501192, 0.278082, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.431373, 0.27451, 0.137255, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18
shadow_color = Color(0, 0, 0, 0.643137)
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dekd3"]
bg_color = Color(1, 0.968627, 0.890196, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.431373, 0.27451, 0.137255, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pfkon"]
bg_color = Color(0.807033, 0.567642, 0.349084, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.431373, 0.27451, 0.137255, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hgobl"]
bg_color = Color(0.298039, 0.686275, 0.313726, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.180392, 0.435294, 0.207843, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18
shadow_size = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a44yi"]
bg_color = Color(0.227451, 0.580392, 0.25098, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.180392, 0.435294, 0.207843, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ul3ko"]
bg_color = Color(0.383203, 0.825988, 0.396028, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.180392, 0.435294, 0.207843, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j4dr5"]
bg_color = Color(0.682353, 0.4, 0.145098, 0.933333)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.231373, 0.121569, 0.0392157, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24
shadow_size = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gyf88"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mw074"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lv8re"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3sfew"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_adqlv"]
bg_color = Color(0.6, 0.6, 0.6, 0)
shadow_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bxtja"]
bg_color = Color(0.945098, 0.890196, 0.784314, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.431373, 0.27451, 0.137255, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 6

[node name="NewStudent" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ydma7")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_a7aiq")

[node name="Card" type="Panel" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -433.0
offset_top = -260.0
offset_right = 421.0
offset_bottom = 261.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_u7y6x")

[node name="Label" type="Label" parent="Card"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -182.0
offset_top = 13.0
offset_right = 182.0
offset_bottom = 88.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.989732, 0.941828, 0.911519, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.231373, 0.121569, 0.0392157, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("2_ydma7")
theme_override_font_sizes/font_size = 64
text = "ENTER NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnBack" type="Button" parent="Card"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 87.0
offset_top = -131.0
offset_right = 295.0
offset_bottom = -35.0
grow_vertical = 0
focus_neighbor_left = NodePath("../../Input/ScrollOne/ScrollDownOne")
focus_neighbor_top = NodePath("../../Input/ScrollOne/ScrollDownOne")
focus_neighbor_right = NodePath("../BtnEnter")
focus_neighbor_bottom = NodePath("../../Input/ScrollOne/ScrollUpOne")
theme_override_colors/font_color = Color(1, 0.968627, 0.890196, 1)
theme_override_colors/font_focus_color = Color(1, 0.968627, 0.890196, 1)
theme_override_colors/font_pressed_color = Color(0.290196, 0.227451, 0.164706, 1)
theme_override_fonts/font = ExtResource("2_ydma7")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_q3doq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dekd3")
theme_override_styles/hover = SubResource("StyleBoxFlat_pfkon")
theme_override_styles/focus = SubResource("StyleBoxFlat_pfkon")
text = "BACK"

[node name="BtnEnter" type="Button" parent="Card"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -290.0
offset_top = -131.0
offset_right = -82.0
offset_bottom = -35.0
grow_horizontal = 0
grow_vertical = 0
focus_neighbor_left = NodePath("../BtnBack")
focus_neighbor_top = NodePath("../../Input/ScrollSix/ScrollDownSix")
focus_neighbor_right = NodePath("../BtnBack")
focus_neighbor_bottom = NodePath("../../Input/ScrollSix/ScrollUpSix")
theme_override_colors/font_color = Color(1, 0.968627, 0.890196, 1)
theme_override_colors/font_focus_color = Color(1, 0.968627, 0.890196, 1)
theme_override_colors/font_pressed_color = Color(0.290196, 0.227451, 0.164706, 1)
theme_override_fonts/font = ExtResource("2_ydma7")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_hgobl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_a44yi")
theme_override_styles/hover = SubResource("StyleBoxFlat_ul3ko")
theme_override_styles/focus = SubResource("StyleBoxFlat_ul3ko")
text = "ENTER"

[node name="HearderPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -716.0
offset_top = 55.0
offset_right = 716.0
offset_bottom = 149.0
grow_horizontal = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_j4dr5")

[node name="Title" type="Label" parent="HearderPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -37.5
offset_right = 176.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.945247, 0.715264, 0.562705, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.231373, 0.121569, 0.0392157, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("2_ydma7")
theme_override_font_sizes/font_size = 64
text = "NEW STUDENT"

[node name="Input" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -362.0
offset_top = -100.0
offset_right = 360.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gyf88")

[node name="ScrollOne" type="Panel" parent="Input"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 3.0
offset_top = -89.5
offset_right = 117.0
offset_bottom = 89.5
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gyf88")

[node name="ScrollUpOne" type="Button" parent="Input/ScrollOne"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_top = -5.0
offset_right = 24.0
offset_bottom = 43.0
grow_horizontal = 2
focus_neighbor_right = NodePath("../../ScrollTwo/ScrollUpTwo")
theme_override_styles/normal = SubResource("StyleBoxFlat_mw074")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lv8re")
theme_override_styles/hover = SubResource("StyleBoxFlat_3sfew")
theme_override_styles/focus = SubResource("StyleBoxFlat_adqlv")
icon = ExtResource("3_jvv66")

[node name="ScrollDownOne" type="Button" parent="Input/ScrollOne"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -43.0
offset_right = 24.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_right = NodePath("../../ScrollTwo/ScrollDownTwo")
theme_override_styles/normal = SubResource("StyleBoxFlat_mw074")
theme_override_styles/pressed = SubResource("StyleBoxFlat_adqlv")
theme_override_styles/focus = SubResource("StyleBoxFlat_adqlv")
icon = ExtResource("4_i84gg")

[node name="LabelOne" type="Label" parent="Input/ScrollOne"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -38.0
offset_right = 49.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.231373, 0.121569, 0.0392157, 1)
theme_override_fonts/font = ExtResource("2_ydma7")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_bxtja")
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollTwo" type="Panel" parent="Input"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 122.0
offset_top = -89.5
offset_right = 236.0
offset_bottom = 89.5
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gyf88")

[node name="ScrollUpTwo" type="Button" parent="Input/ScrollTwo"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -16.0
offset_top = -5.0
offset_right = 16.0
offset_bottom = 34.0
grow_horizontal = 2
focus_neighbor_right = NodePath("../../ScrollThree/ScrollUpThree")
theme_override_styles/normal = SubResource("StyleBoxFlat_mw074")
theme_override_styles/pressed = SubResource("StyleBoxFlat_adqlv")
theme_override_styles/focus = SubResource("StyleBoxFlat_adqlv")
icon = ExtResource("3_jvv66")

[node name="ScrollDownTwo" type="Button" parent="Input/ScrollTwo"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -34.0
offset_right = 16.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_left = NodePath("../../ScrollOne/ScrollDownOne")
focus_neighbor_right = NodePath("../../ScrollThree/ScrollDownThree")
theme_override_styles/normal = SubResource("StyleBoxFlat_mw074")
theme_override_styles/pressed = SubResource("StyleBoxFlat_adqlv")
theme_override_styles/focus = SubResource("StyleBoxFlat_adqlv")
icon = ExtResource("4_i84gg")

[node name="LabelTwo" type="Label" parent="Input/ScrollTwo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -38.0
offset_right = 49.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.231373, 0.121569, 0.0392157, 1)
theme_override_fonts/font = ExtResource("2_ydma7")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_bxtja")
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollThree" type="Panel" parent="Input"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 241.0
offset_top = -89.5
offset_right = 355.0
offset_bottom = 89.5
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gyf88")

[node name="ScrollUpThree" type="Button" parent="Input/ScrollThree"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -16.0
offset_top = -5.0
offset_right = 16.0
offset_bottom = 34.0
grow_horizontal = 2
focus_neighbor_right = NodePath("../../ScrollFour/ScrollUpFour")
theme_override_styles/normal = SubResource("StyleBoxFlat_mw074")
theme_override_styles/pressed = SubResource("StyleBoxFlat_adqlv")
theme_override_styles/focus = SubResource("StyleBoxFlat_adqlv")
icon = ExtResource("3_jvv66")

[node name="ScrollDownThree" type="Button" parent="Input/ScrollThree"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -34.0
offset_right = 16.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_left = NodePath("../../ScrollTwo/ScrollDownTwo")
focus_neighbor_right = NodePath("../../ScrollFour/ScrollDownFour")
theme_override_styles/normal = SubResource("StyleBoxFlat_mw074")
theme_override_styles/pressed = SubResource("StyleBoxFlat_adqlv")
theme_override_styles/focus = SubResource("StyleBoxFlat_adqlv")
icon = ExtResource("4_i84gg")

[node name="LabelThree" type="Label" parent="Input/ScrollThree"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -38.0
offset_right = 49.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.231373, 0.121569, 0.0392157, 1)
theme_override_fonts/font = ExtResource("2_ydma7")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_bxtja")
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollFour" type="Panel" parent="Input"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 363.0
offset_top = -89.5
offset_right = 477.0
offset_bottom = 89.5
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gyf88")

[node name="ScrollUpFour" type="Button" parent="Input/ScrollFour"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -16.0
offset_top = -5.0
offset_right = 16.0
offset_bottom = 34.0
grow_horizontal = 2
focus_neighbor_right = NodePath("../../ScrollFive/ScrollUpFive")
theme_override_styles/normal = SubResource("StyleBoxFlat_mw074")
theme_override_styles/pressed = SubResource("StyleBoxFlat_adqlv")
theme_override_styles/focus = SubResource("StyleBoxFlat_adqlv")
icon = ExtResource("3_jvv66")

[node name="ScrollDownFour" type="Button" parent="Input/ScrollFour"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -34.0
offset_right = 16.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_left = NodePath("../../ScrollThree/ScrollDownThree")
focus_neighbor_right = NodePath("../../ScrollFive/ScrollDownFive")
theme_override_styles/normal = SubResource("StyleBoxFlat_mw074")
theme_override_styles/pressed = SubResource("StyleBoxFlat_adqlv")
theme_override_styles/focus = SubResource("StyleBoxFlat_adqlv")
icon = ExtResource("4_i84gg")

[node name="LabelFour" type="Label" parent="Input/ScrollFour"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -38.0
offset_right = 49.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.231373, 0.121569, 0.0392157, 1)
theme_override_fonts/font = ExtResource("2_ydma7")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_bxtja")
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollFive" type="Panel" parent="Input"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 479.0
offset_top = -89.5
offset_right = 593.0
offset_bottom = 89.5
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gyf88")

[node name="ScrollUpFive" type="Button" parent="Input/ScrollFive"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -16.0
offset_top = -5.0
offset_right = 16.0
offset_bottom = 34.0
grow_horizontal = 2
focus_neighbor_right = NodePath("../../ScrollSix/ScrollUpSix")
theme_override_styles/normal = SubResource("StyleBoxFlat_mw074")
theme_override_styles/pressed = SubResource("StyleBoxFlat_adqlv")
theme_override_styles/focus = SubResource("StyleBoxFlat_adqlv")
icon = ExtResource("3_jvv66")

[node name="ScrollDownFive" type="Button" parent="Input/ScrollFive"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -43.0
offset_right = 24.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_left = NodePath("../../ScrollFour/ScrollDownFour")
focus_neighbor_right = NodePath("../../ScrollSix/ScrollDownSix")
theme_override_styles/normal = SubResource("StyleBoxFlat_mw074")
theme_override_styles/pressed = SubResource("StyleBoxFlat_adqlv")
theme_override_styles/focus = SubResource("StyleBoxFlat_adqlv")
icon = ExtResource("4_i84gg")

[node name="LabelFive" type="Label" parent="Input/ScrollFive"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -38.0
offset_right = 49.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.231373, 0.121569, 0.0392157, 1)
theme_override_fonts/font = ExtResource("2_ydma7")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_bxtja")
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollSix" type="Panel" parent="Input"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -118.0
offset_top = -89.5
offset_right = -4.0
offset_bottom = 89.5
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gyf88")

[node name="ScrollUpSix" type="Button" parent="Input/ScrollSix"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.0
offset_top = -5.0
offset_right = 25.0
offset_bottom = 43.0
grow_horizontal = 2
focus_neighbor_right = NodePath("../../ScrollOne/ScrollUpOne")
focus_neighbor_bottom = NodePath("../ScrollDownSix")
theme_override_styles/normal = SubResource("StyleBoxFlat_mw074")
theme_override_styles/pressed = SubResource("StyleBoxFlat_adqlv")
theme_override_styles/focus = SubResource("StyleBoxFlat_adqlv")
icon = ExtResource("3_jvv66")

[node name="LabelSix" type="Label" parent="Input/ScrollSix"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -38.0
offset_right = 49.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.231373, 0.121569, 0.0392157, 1)
theme_override_fonts/font = ExtResource("2_ydma7")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_bxtja")
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollDownSix" type="Button" parent="Input/ScrollSix"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -23.0
offset_top = -43.0
offset_right = 25.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_left = NodePath("../../ScrollFive/ScrollDownFive")
focus_neighbor_right = NodePath("../../ScrollOne/ScrollDownOne")
theme_override_styles/normal = SubResource("StyleBoxFlat_mw074")
theme_override_styles/pressed = SubResource("StyleBoxFlat_adqlv")
theme_override_styles/focus = SubResource("StyleBoxFlat_adqlv")
icon = ExtResource("4_i84gg")
